Updated apiVersion to be supported by kube 1.16 api  (#97)
* Updated apiVersion to be supported by kube 1.16 api

* Updated version, added matchLabels, and updated gitignore to add new tar

* Official couchDB helm chart moved and updated to support kube 1.16 api

* Updating packaged tar to have new couchdb

--- a/chart/customer/templates/customer.yaml
+++ b/chart/customer/templates/customer.yaml
@@ -16,7 +16,7 @@ spec:
 
 ---
 
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: "{{ .Release.Name }}-{{ .Values.service.name }}"
@@ -24,11 +24,12 @@ metadata:
     {{- include "customer.labels" . | indent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector: 
+    matchLabels: {{- include "customer.labels" . | indent 6 }}
   template:
     metadata:
       labels:
         {{- include "customer.labels" . | indent 8 }}
-
     spec:
       containers:
       # Liberty Server Container
