Allowed for MP Metrics and Fallback/Retries for Istio (#98)
* Telemetry and fallback configured for istio

* Setting 5xx as the retryOn property

* Adding PR comment changes and 0.1.2

* Stting config to be mpft-confit for uniformity

* Updated index

--- a/chart/customer/templates/istio_customer.yaml
+++ b/chart/customer/templates/istio_customer.yaml
@@ -52,4 +52,16 @@ spec:
         host: {{ .Release.Name }}-{{ .Values.service.name }}.{{ .Release.Namespace }}.svc.cluster.local
         port:
           number: {{ .Values.service.servicePort }}
+    retries:
+      attempts: 4
+      retryOn: 5xx
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Release.Name }}-{{ .Values.service.name }}-mpft-config
+data:
+  MP_Fault_Tolerance_NonFallback_Enabled: "false"
 {{ end }}
