Update deployment name for populate. Use alpine image for smaller image

--- a/chart/customer/templates/load_data.yaml
+++ b/chart/customer/templates/load_data.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{ .Release.Name }}-populate"
+  name: "{{ .Release.Name }}-{{ .Values.service.name }}-populate"
 spec:
   template:
     # Used with istio
