--- a/populate/Dockerfile
+++ b/populate/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3
+FROM python:3-alpine
 ADD populate.py requirements.txt /tmp/
 RUN pip3 install -r tmp/requirements.txt
 ENTRYPOINT ["python3", "tmp/populate.py"]
