Upgrade maven plugins, add more time for populate job to complete

--- a/chart/customer/templates/load_data.yaml
+++ b/chart/customer/templates/load_data.yaml
@@ -14,4 +14,6 @@ spec:
         image: ibmcase/populate
         imagePullPolicy: IfNotPresent
         command: ["/bin/sh", "-c", "python3 /tmp/populate.py  {{ .Release.Name }}-{{ .Values.couchdb.hostSuffix }} {{ .Values.couchdb.port }}"]
+      completions: 1
+      activeDeadlineSeconds: 600
       restartPolicy: Never
