--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,21 @@
         <testServerHttpPort>9080</testServerHttpPort>
         <testServerHttpsPort>9443</testServerHttpsPort>
         <warContext>${app.name}</warContext>
-        <package.file>${project.build.directory}/${project.artifactId}-${project.version}.zip</package.file>
-        <packaging.type>usr</packaging.type>
+        <package.name>${project.artifactId}-${project.version}</package.name>
+        <package.type>zip</package.type>
+        <include>usr</include>
         <groupId.liberty-runtime>com.ibm.websphere.appserver.runtime</groupId.liberty-runtime>
         <artifactId.liberty-runtime>wlp-webProfile8</artifactId.liberty-runtime>
         <version.liberty-runtime>19.0.0.2</version.liberty-runtime>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.openliberty.tools</groupId>
+            <artifactId>liberty-maven-plugin</artifactId>
+            <version>3.1</version>
+            <type>maven-plugin</type>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -139,7 +146,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.22.2</version>
                 <executions>
                     <execution>
                         <phase>test</phase>
@@ -155,21 +162,22 @@
             </plugin>
             <!-- Enable liberty-maven plugin -->
             <plugin>
-                <groupId>net.wasdev.wlp.maven.plugins</groupId>
+                <groupId>io.openliberty.tools</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
-                <version>2.4.2</version>
+                <version>3.1</version>
                 <configuration>
-                    <assemblyArtifact>
+                    <runtimeArtifact>
                       <groupId>${groupId.liberty-runtime}</groupId>
                       <artifactId>${artifactId.liberty-runtime}</artifactId>
                       <version>${version.liberty-runtime}</version>
                       <type>zip</type>
-                    </assemblyArtifact>
-                    <configFile>${basedir}/src/main/liberty/config/server.xml</configFile>
-                    <serverEnv>${basedir}/src/main/liberty/config/server.env</serverEnv>
+                    </runtimeArtifact>
+                    <serverXmlFile>${basedir}/src/main/liberty/config/server.xml</serverXmlFile>
+                    <serverEnvFile>${basedir}/src/main/liberty/config/server.env</serverEnvFile>
                     <jvmOptionsFile>${basedir}/src/main/liberty/config/jvm.options</jvmOptionsFile>
-                    <packageFile>${package.file}</packageFile>
-                    <include>${packaging.type}</include>
+                    <packageName>${package.name}</packageName>
+                    <packageType>${package.type}</packageType>
+                    <include>${include}</include>
                     <bootstrapProperties>
                         <app.location>${project.artifactId}-${project.version}.war</app.location>
                         <default.http.port>${testServerHttpPort}</default.http.port>
@@ -192,33 +200,33 @@
                         <id>create-default-server</id>
                         <phase>prepare-package</phase>
                         <goals>
-                            <goal>create-server</goal>
+                            <goal>create</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>install-app</id>
+                        <id>deploy</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>install-apps</goal>
+                            <goal>deploy</goal>
                         </goals>
                         <configuration>
                             <appsDirectory>apps</appsDirectory>
                             <stripVersion>false</stripVersion>
-                            <installAppPackages>project</installAppPackages>
+                            <deployPackages>project</deployPackages>
                         </configuration>
                     </execution>
                     <execution>
                         <id>start-server</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <goal>test-start-server</goal>
+                            <goal>test-start</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>stop-server</id>
                         <phase>post-integration-test</phase>
                         <goals>
-                            <goal>test-stop-server</goal>
+                            <goal>test-stop</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -246,7 +254,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.22.2</version>
                 <executions>
                     <execution>
                         <phase>integration-test</phase>
@@ -283,8 +291,9 @@
         <profile>
             <id>runnable</id>
             <properties>
-                <package.file>${project.build.directory}/${app.name}.jar</package.file>
-                <packaging.type>runnable</packaging.type>
+                <package.name>${app.name}</package.name>
+                <package.type>jar</package.type>
+                <include>runnable</include>
             </properties>
         </profile>
         <profile>
